// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaskList /> render() renders List components for each present list 1`] = `
<div
  className="TaskList"
>
  <List
    id="1"
    items={Array []}
    key="1"
    title="list title"
  />
</div>
`;

exports[`<TaskList /> render() renders a canned error message when an error object is set but without a messsage 1`] = `
<div>
  <h1>
    An unknown error occurred
  </h1>
</div>
`;

exports[`<TaskList /> render() renders a simple message if there are no lists 1`] = `
<h1>
  No lists! You should create one somehow
</h1>
`;

exports[`<TaskList /> render() renders an error message when state.error has a value 1`] = `
<div>
  <h1>
    Error: 
    test error
  </h1>
</div>
`;

exports[`<TaskList /> render() renders as loading for the initial state 1`] = `
<div>
  Loading...
</div>
`;
